<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reconfirm"
        android:enabled="true"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:title="@string/menu_reconfirm"
        app:showAsAction="ifRoom" />

</menu>